Fix properties box layout for profiles/projects on mobile
Summary: The spacing here is incorrect and no longer needed.

Test Plan: Test phone layout of project, profile.

Reviewers: epriestley

Reviewed By: epriestley

Subscribers: Korvin

Differential Revision: https://secure.phabricator.com/D16511

--- a/webroot/rsrc/css/application/project/project-view.css
+++ b/webroot/rsrc/css/application/project/project-view.css
@@ -36,10 +36,6 @@
     padding: 12px 0;
   }
 
-.device-phone .phui-box.project-view-properties {
-  margin: 0 12px 0 12px;
-}
-
 .project-view-properties .phui-property-list-container +
   .phui-property-list-text-content {
   border-color: rgba({$alphagrey},.2);
